--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <h1>JARDEVS</h1>
     <ul>
-        <li><a href="index.html" class="navBtn">About</a></li>
-        <li><a href="projects.html" class="navBtn">Projects</a></li>
-        <li><a href="contact.html" class="navBtn">Contact</a></li>
+        <li><a href="/index" class="navBtn">About</a></li>
+        <li><a href="/projects" class="navBtn">Projects</a></li>
+        <li><a href="/contact" class="navBtn">Contact</a></li>
     </ul>
 </nav>
