--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <h1>JARDEVS</h1>
+    <h1>JARDEV</h1>
     <ul>
         <li><a href="/index" class="navBtn">About</a></li>
         <li><a href="/projects" class="navBtn">Projects</a></li>
