--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet", href="style.css">
     <link rel="icon", href="favicon.PNG">
-    <title>JARDEVS / About</title>
+    <title>JARDEV / About</title>
     <meta name="description" content="AAAAAAAAAAAAAAAAAAAAA this is my website">
     <meta name="keywords" content="jar,jarh,jared,hay,jaredhay,dev,games,programmer,programs,app,developer,code">
                                   
@@ -14,13 +14,13 @@
         <div id="nav-placeholder"></div>
     </div>
     <div class="content">
-        <h2>About Me</h2>
+        <h2>ABOUT MEE</h2>
         <p1>Hey there, My name is Jared.</p1><br>
         <p1>I'm a 15 year old developer mainly does Game Development in C# on Unity.</p1>
         <br>
         <p1>I make my games mostly solo - Art, 3D models, and Programming are done by me. I have a friend who does music for the games.</p1>
         <br>
-        <p1>Please take a look at my <a href="projects.html">Projects</a> page to see what I'm currently working on.</p1>
+        <p1>Please take a look at my <a href="/projects">Projects</a> page to see what I'm currently working on.</p1>
     </div>
 </body>
 
