--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="nav-placeholder"></div>
     </div>
     <div class="content">
-        <h2>ABOUT MEE</h2>
+        <h2>ABOUT ME</h2>
         <p1>Hey there, My name is Jared.</p1><br>
         <p1>I'm a 15 year old developer mainly does Game Development in C# on Unity.</p1>
         <br>
