--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet", href="style.css">
     <link rel="icon", href="favicon.PNG">
     <title>JARDEV / About</title>
-    <meta name="description" content="AAAAAAAAAAAAAAAAAAAAA this is my website">
+    <meta name="description" content="Welcome to my Website">
     <meta name="keywords" content="jar,jarh,jared,hay,jaredhay,dev,games,programmer,programs,app,developer,code">
                                   
 </head>
@@ -15,12 +15,7 @@
     </div>
     <div class="content">
         <h2>ABOUT ME</h2>
-        <p1>Hey there, My name is Jared.</p1><br>
-        <p1>I'm a 15 year old developer mainly does Game Development in C# on Unity.</p1>
-        <br>
-        <p1>I make my games mostly solo - Art, 3D models, and Programming are done by me. I have a friend who does music for the games.</p1>
-        <br>
-        <p1>Please take a look at my <a href="/projects">Projects</a> page to see what I'm currently working on.</p1>
+        <p>Hey there, My name is Jared. I'm a 15 year old developer mainly does Game Development in C# on Unity. I make my games mostly solo - Art, 3D models, and Programming are done by me. I have a friend who does music for the games. Please take a look at my <a href="/projects">Projects</a> page to see what I'm currently working on.</p>
     </div>
 </body>
 
