--- a/index.html
+++ b/index.html
@@ -11,26 +11,18 @@
 
 <body>
     <div class="header">
-        <div id="nav-placeholder"></div>
+        <nav>
+            <h1>JARDEV</h1>
+            <ul>
+                <li><a href="/index" class="navBtn">About</a></li>
+                <li><a href="/projects" class="navBtn">Projects</a></li>
+                <li><a href="/contact" class="navBtn">Contact</a></li>
+            </ul>
+        </nav>
     </div>
     <div class="content">
         <h2>ABOUT ME</h2>
         <p>Hey there, My name is Jared. I'm a 15 year old developer mainly does Game Development in C# on Unity. I make my games mostly solo - Art, 3D models, and Programming are done by me. I have a friend who does music for the games. Please take a look at my <a href="/projects">Projects</a> page to see what I'm currently working on.</p>
     </div>
 </body>
-
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script>
-$(function(){
-  $("#nav-placeholder").load("nav.html");
-});
-</script>
-
-<script>
-
-window.onload = () => {
-   let bannerNode = document.querySelector('[alt="www.000webhost.com"]').parentNode.parentNode;
-   bannerNode.parentNode.removeChild(bannerNode);
-}
-
 </script>
