--- a/about.html
+++ b/about.html
@@ -15,8 +15,9 @@
         </div>
 
         <div class="content">
-            <h1 class="title">Projects</h1>
-            <p>I am not working on anything right now, nothing to see here</p>
+            <h1 class="title">About Me</h1>
+            <p>Hello there, my name is Jared. I am a Student Developer learning C# in Unity.</p>
+            <p>I have been practicing code for almost 5 years now and make Games mostly solo.</p>
             <p class="navigation">
                 <a href="/index/">Home</a> -
                 <a href="/about/">About</a> -
