--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet", href="style.css">
-    <link rel="icon", href="favicon.PNG">
-    <title>JARDEV / About</title>
-    <meta name="description" content="Welcome to my Website">
-    <meta name="keywords" content="jar,jarh,jared,hay,jaredhay,dev,games,programmer,programs,app,developer,code">
-                                  
-</head>
+<html lang="en">
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" type="text/css" href="style.css">
 
-<body>
-    <div class="header">
-        <nav>
-            <h1>JARDEV</h1>
-            <ul>
-                <li><a href="/index" class="navBtn">About</a></li>
-                <li><a href="/projects" class="navBtn">Projects</a></li>
-                <li><a href="/contact" class="navBtn">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="content">
-        <h2>ABOUT ME</h2>
-        <p>Hey there, My name is Jared. I'm a 15 year old developer mainly does Game Development in C# on Unity. I make my games mostly solo - Art, 3D models, and Programming are done by me. I have a friend who does music for the games. Please take a look at my <a href="/projects">Projects</a> page to see what I'm currently working on.</p>
-    </div>
-</body>
+        <title>JARDEV - Home</title>
+    </head>
+    <body class="preload">
+        <div class="header">
+            <nav>
+                <img src="logo.PNG" alt="My Logo" class="logo">
+                <h1 class="jardev">JARDEV.net</h1>
+            </nav>
+        </div>
+
+        <div class="content">
+            <h1 class="title">Hi, Welcome to my Website</h1>
+            <p class="navigation">
+                <a href="/index/">Home</a> -
+                <a href="/about/">About</a> -
+                <a href="/projects/">Projects</a> -
+                <a href="/contact/">Contact</a>
+            </p>
+        </div>
+    </body>
+</html>
+
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+<script>
+    $(window).load(function() {
+        $("body").removeClass("preload");
+    });
 </script>
