Fixed Meta Data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="style.css">
-
+        <meta name="description" content="JARDEV - Home">
         <title>JARDEV - Home</title>
     </head>
     <body class="preload">
