--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Arimo:400,400i,700,700i&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="style.css">
-
-        <title>JARDEV - Home</title>
+        <meta name="description" content="JARDEV - Projects">
+        <title>JARDEV - Projects</title>
     </head>
     <body class="preload">
         <div class="header">
